# pysnobal

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml  release-linux.yml  release-windows.yml
pysnobal/: ipysnobal.py  pysnobal.py
pysnobal/c_snobal/: __init__.py  snobal.c
test_data_point/: plotPointData.py
tests/: test_pysnobal.py
