[project]
name = "pysnobal"
description = "Python wrapper of the Snobal mass and energy balance snow model"
version = "0.2.0"
readme = "README.md"
requires-python = ">= 3.11"
dependencies = ["numpy>=1,<3", "pandas>=2.2.3,<3", "netcdf4>=1.7.2,<2", "progressbar>=2.5,<3"]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "cython", "numpy"]

[tool.cibuildwheel]
# Skip PyPy, 32-bit, and musl builds
skip = "pp* *-manylinux_i686 *-musllinux_*"
test-command = "pytest {package}/tests"
test-groups = ["test"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pysnobal = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.environments]
build = ["build"]
test = ["test"]

[tool.pixi.feature.build.tasks]
build = "python -m build"
buildall = "cibuildwheel --output-dir=dist"

[tool.pixi.feature.test.tasks]
test = "pytest"

[dependency-groups]
build = ["build", "cibuildwheel"]
test = ["pytest"]
